// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When removing a crossing as admin@community.floods  the new crossing should show up in the DB 1`] = `
Object {
  "crossingById": Object {
    "communityCrossingsByCrossingId": Object {
      "nodes": Array [
        Object {
          "communityId": 1,
        },
      ],
    },
    "description": "TEST LAND IS MAGIC!",
    "humanAddress": "In test land",
    "name": "New Crossing",
  },
}
`;

exports[`When removing a crossing as editor@community.floods  should fail to delete the new crossing 1`] = `[Error: GraphQL Error: permission denied for function remove_crossing]`;

exports[`When removing a crossing as editor@community.floods  the new crossing should show up in the DB 1`] = `
Object {
  "crossingById": Object {
    "communityCrossingsByCrossingId": Object {
      "nodes": Array [
        Object {
          "communityId": 1,
        },
      ],
    },
    "description": "TEST LAND IS MAGIC!",
    "humanAddress": "In test land",
    "name": "New Crossing",
  },
}
`;

exports[`When removing a crossing as superadmin@flo.ods  the new crossing should show up in the DB 1`] = `
Object {
  "crossingById": Object {
    "communityCrossingsByCrossingId": Object {
      "nodes": Array [
        Object {
          "communityId": 1,
        },
      ],
    },
    "description": "TEST LAND IS MAGIC!",
    "humanAddress": "In test land",
    "name": "New Crossing",
  },
}
`;

exports[`When removing a crossing as superadmin@flo.ods  the new crossing should show up in the DB 2`] = `
Object {
  "crossingById": Object {
    "communityCrossingsByCrossingId": Object {
      "nodes": Array [
        Object {
          "communityId": 2,
        },
      ],
    },
    "description": "TEST LAND IS MAGIC!",
    "humanAddress": "In test land",
    "name": "New Crossing",
  },
}
`;
